[package]
name = "myox_js_bundler"
version = "0.1.0"
authors = ["Konstantin Matsiushonak <k.matush@yandex.com"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
serde_json = "1.0.59"
swc_common = "0.10.5"
swc_ecma_ast = "0.35.0"
swc_ecma_codegen = "0.41.1"
swc_ecma_parser = "0.43.1"
swc_ecma_transforms = "0.30.3"
swc_ecma_visit = "0.21.0"
uuid = {version = "0.8.1", features = ["v4"]}

[dev-dependencies]
tempfile = "3.1.0"